module04/deploy/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app-wortner
    release: ms-prometheus
  name: hello-app-wortner
spec:
  selector:
    app: hello-app-wortner
    release: ms-prometheus
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
    name: http
